# CoViS-Net

./: .gitignore  README.md  environment.yml  pre_training_setup.bash
dataset_util/: generate_dataset.bash  generate_dataset.py
datasets/: download.sh
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
evaluation/: export_model_torchscript.py  export_torchscript_tensorrt.py  run_decentralized.py
evaluation/ros2/: README.md  copy_from_jetson.bash  copy_to_jetsons.bash  cyclone_dds_profile_base.xml  docker-compose.yml
evaluation/ros2/configs/: cyclone_dds_profile_base.xml  rviz.cfg.rviz
evaluation/ros2/docker/control/: Dockerfile  run_docker.sh
evaluation/ros2/docker/encoder/: Dockerfile  pr2118_version_fix.patch  run_docker.sh
evaluation/ros2/src/control/: package.xml  setup.py
evaluation/ros2/src/control/control/: multi_agent_trajectory_control.py  remote_control.py  simple_pose_control.py  trajectory_control.py
evaluation/ros2/src/control/launch/: control.launch.py  control_visual_trajectory.launch.py  freyja_robomaster_mocap.launch.yaml  freyja_robomaster_r2.launch.yaml  freyja_robomaster_robot.launch.yaml
evaluation/ros2/src/sensing_cpp/: CMakeLists.txt  format.bash  package.xml
evaluation/ros2/src/sensing_cpp/cfg/: swmc_net_config_adhoc_robomaster_0.json  swmc_net_config_adhoc_robomaster_1.json  swmc_net_config_adhoc_robomaster_2.json  swmc_net_config_adhoc_robomaster_20.json  swmc_net_config_adhoc_robomaster_3.json  swmc_net_config_adhoc_robomaster_4.json
evaluation/ros2/src/sensing_cpp/include/swmc/: swmc.hpp  swmc_net.h
evaluation/ros2/src/sensing_cpp/launch/: encoding.launch.py  sensing.launch.py
evaluation/ros2/src/sensing_cpp/lib/: README.md
evaluation/ros2/src/sensing_cpp/models/: download.sh
evaluation/ros2/src/sensing_cpp/src/: encode_img.cpp  predict_pose.cpp
evaluation/ros2/src/sensing_msgs/: CMakeLists.txt  package.xml
evaluation/ros2/src/sensing_msgs/msg/: EncodedImage.msg  PolarPose.msg  PolarPoseWithCovariance.msg  PolarPoseWithCovarianceStamped.msg
models/: README.md  download.sh
train/: __main__.py  dataloader.py  dice_loss.py  rendering.py  train.py
train/configs/: covisnet.yaml  logging.yaml
train/models/: dinov2_vision_transformer.py  model_bev_cnn.py  model_bev_pose.py
train/models/layers/: attention.py  block.py
